--- a/index.html
+++ b/index.html
@@ -173,16 +173,14 @@ background-color: #E6FFFA;
     <div class="info-block">
       <p>
 <h3>  Stress, Sleep, Anxiety </h3>
-    <p class="subtitle"> with Vishal Merani
- Stop struggling! Decode and overcome them with powerful yet simple breathwork 
+    <p class="subtitle">
+<br> Stop struggling! Decode and overcome them with powerful yet simple breathwork 
 </p>
 
       </p>
     </div>
 
-    <ul class="timeline">
-      <li>this 18, 19, 20 <strong>Time:</strong> 7:30 PM – 10:00 PM</li>
-    </ul>
+
     <div class="info-block">
       <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
 <p> 
@@ -191,6 +189,10 @@ background-color: #E6FFFA;
      <li> Naturally activate parasympathetic system </li>
 </p>
       <p style="margin-top: 8px;">
+
+    <ul class="timeline">
+      <li>this 18, 19, 20 <strong>Time:</strong> 7:30 PM – 10:00 PM</li>
+    </ul>
         <br>
         📞 9818503888<br>
       </p>
