--- a/index.html
+++ b/index.html
@@ -176,12 +176,11 @@ background-color: #E6FFFA;
     <p class="subtitle">
 <br> Stop struggling! Decode and overcome them with powerful yet simple breathwork 
 </p>
-
       </p>
     </div>
     <div class="info-block">
       <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
-<p> 
+<p> <br>
      <li> Proven method to calm anxiety</li>
       <li> Simple techniques for better sleep</li>
      <li> Naturally activate parasympathetic system </li>
@@ -189,7 +188,7 @@ background-color: #E6FFFA;
       <p style="margin-top: 8px;">
 
     <ul class="timeline">
-      <li>this 18, 19, 20 <strong>Time:</strong> 7:30 PM – 10:00 PM</li>
+      <li> <strong>Time:</strong> 7:30 PM – 10:00 PM</li>
     </ul>
         <br>
         📞 9818503888<br>
