--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@ background-color: #E6FFFA;
       <p>
 <h3>  Stress, Sleep, Anxiety </h3>
     <p class="subtitle">
-<br> Stop struggling! Decode and overcome them with powerful yet simple breathwork 
+<br> Stop struggling! Decode and Conquer 
 </p>
       </p>
     </div>
     <div class="info-block">
-      <a href="https://aolt.in/883226" class="button" target="_blank">Register</a>
+      <a href="https://aolt.in/883226" class="button" target="_blank"> 18-20, Register now</a>
 <p> <br>
      <li> Proven method to calm anxiety</li>
       <li> Simple techniques for better sleep</li>
