--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@ background-color: #E6FFFA;
         <br>
         📞 9818503888<br>
       </p>
+ <p><strong>📍 Location</strong>
+      Zoom | Online
+      </p>
     </div>
 
     <div class="copy-box">
