--- a/index.html
+++ b/index.html
@@ -189,13 +189,14 @@ background-color: #E6FFFA;
 
     <ul class="timeline">
       <li> <strong>Time:</strong> 7:30 PM – 10:00 PM</li>
+ <p><strong>📍</strong>
+      Zoom | Online
+      </p>
     </ul>
         <br>
         📞 9818503888<br>
       </p>
- <p><strong>📍 Location</strong>
-      Zoom | Online
-      </p>
+
     </div>
 
     <div class="copy-box">
