--- a/index.html
+++ b/index.html
@@ -188,12 +188,10 @@ background-color: #E6FFFA;
       <p style="margin-top: 8px;">
 
     <ul class="timeline">
-      <li> <strong>Time:</strong> 7:30 PM – 10:00 PM</li>
- <p><strong>📍</strong>
-      Zoom | Online
+      <li> Time: 7:30 PM – 10:00 PM</li>
+ <p><strong>📍      Zoom | Online </strong>
       </p>
     </ul>
-        <br>
         📞 9818503888<br>
       </p>
 
