--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       margin-bottom: 0.24rem;
     }
 
-  h3 {
+    h3 {
       font-size: 1.15rem;
       font-weight: 400;
       margin-bottom: 0.22rem;
-background-color: #E6FFFA;
+      background-color: #E6FFFA;
     }
 
     .subtitle {
@@ -110,6 +110,18 @@ background-color: #E6FFFA;
 
     .timeline li strong {
       font-weight: 600;
+    }
+
+    ul.features {
+      list-style: disc;
+      padding-left: 1.2rem;
+      margin: 0.5rem 0 1rem;
+    }
+
+    ul.features li {
+      font-size: 0.85rem;
+      color: #888;
+      margin-bottom: 4px;
     }
 
     .copy-box {
@@ -167,38 +179,31 @@ background-color: #E6FFFA;
 
   <!-- Card 1: June Sleep & Anxiety Program -->
   <div class="iphone-frame">
-    <h1> This June,  </h1>
-    <h2>  Discover DSAR </h2>
-    <p class="subtitle"> with Vishal Merani</p>
+    <h1>This June,</h1>
+    <h2>Discover DSAR</h2>
+    <p class="subtitle">with Vishal Merani</p>
     <div class="info-block">
-      <p>
-<h3>  Stress, Sleep, Anxiety </h3>
-    <p class="subtitle">
-<br> Stop struggling! Decode and Conquer 
-</p>
-      </p>
+      <h3>Stress, Sleep, Anxiety</h3>
+      <p class="subtitle"><br>Stop struggling! Decode and Conquer</p>
     </div>
     <div class="info-block">
-      <a href="https://aolt.in/883226" class="button" target="_blank"> 18-20, Register now</a>
-<p> <br>
-     <li> Proven method to calm anxiety</li>
-      <li> Simple techniques for better sleep</li>
-     <li> Naturally activate parasympathetic system </li>
-</p>
-      <p style="margin-top: 8px;">
+      <a href="https://aolt.in/883226" class="button" target="_blank">18–20, Register now</a>
 
-    <ul class="timeline">
-      <li> Time: 7:30 PM – 10:00 PM</li>
- <p><strong>📍      Zoom | Online </strong>
-      </p>
-    </ul>
-        📞 9818503888<br>
-      </p>
+      <ul class="features">
+        <li>Proven method to calm anxiety</li>
+        <li>Simple techniques for better sleep</li>
+        <li>Naturally activate parasympathetic system</li>
+      </ul>
 
+      <ul class="timeline">
+        <li>Time: 7:30 PM – 10:00 PM</li>
+        <p><strong>📍 Zoom | Online</strong></p>
+      </ul>
+      📞 9818503888
     </div>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value=" Deep Sleep & Anxiety Relief | 18–20 June 2025" id="copyText2" readonly>
+      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief | 18–20 June 2025" id="copyText2" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText2')">Copy</button>
     </div>
 
