--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <div class="iphone-frame">
     <h1>This July,</h1>
     <h2>Happiness Program</h2>
-    <p class="subtitle">with Vishal Ji & Vikram Ji</p>
+    <p class="subtitle">with Vishal Merani Ji</p>
     <p class="subtitle">In person | English, Hindi</p>
 
     <div class="info-block">
@@ -233,7 +233,7 @@
         Art of Living International Center<br>
         Bengaluru, Karnataka
       </p>
-      <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">View on Maps</a>
+      <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
     </div>
 
     <div class="copy-box">
@@ -252,5 +252,39 @@
       navigator.clipboard.writeText(copyText.value);
     }
   </script>
+
+  <!-- Card 3: Learn Sahaj, the Sahaj way -->
+  <div class="iphone-frame">
+    <h1> Weekly,</h1>
+    <h2> Online </h2>
+    <p class="subtitle">with Vishal Merani</p>
+    <div class="info-block">
+      <h3>Lapse into meditation in minutes</h3>
+      <p class="subtitle"><br>Feel Good 😌 Live Light 🪶 </p>
+    </div>
+    <div class="info-block">
+
+      <ul class="features">
+        <li>Personal</li>
+        <li>Customized</li>
+        <li>Yours</li>
+      </ul>
+
+      <ul class="timeline">
+        <li>Happening every week </li>
+        <p><strong>📍 Zoom | Online</strong></p>
+      </ul>
+     Drop a note 📞 9818503888
+    </div>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Sahaj Samadhi Meditation | Weekly in 2025" id="copyText2" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText2')">Copy</button>
+    </div>
+
+    <div class="footer"> 🧘🏻‍♂️ 3 days only | Pick a Week | ♡ Online Sessions</div>
+  </div>
+
+
 </body>
 </html>
