--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <div class="iphone-frame">
     <h1>This July,</h1>
     <h2>Happiness Program</h2>
-    <p class="subtitle">with Vishal Merani Ji</p>
+    <p class="subtitle">with Vishal Merani </p>
 <h3>Get Hyper detoxed with Sudarshan Kriya</h3>
     <p class="subtitle">In person | English, Hindi</p>
 
