--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <h1>This July,</h1>
     <h2>Happiness Program</h2>
     <p class="subtitle">with Vishal Merani </p>
-<h3>Get Hyper detoxed with Sudarshan Kriya</h3>
+<h3>Hyper Detox with Sudarshan Kriya</h3>
     <p class="subtitle">In person | English, Hindi</p>
 
     <div class="info-block">
