--- a/index.html
+++ b/index.html
@@ -223,10 +223,15 @@
     </div>
 
     <ul class="timeline">
-      <li><strong>24 Jul</strong> – Check-in from 2:00 PM</li>
+      <li>24 Jul – Check-in post noon </li>
       <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
       <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
-      <li><strong>28 Jul</strong> – Check-out by 9:30 AM</li>
+      <li>28 Jul – Check-out by Noon </li> 
+    </ul> 
+    <ul class="features">
+     <li> attend complimentary rudra pooja meditation on mondays</li>
+      <li>complimentary infinite follow-ups</li>
+      <li> complimentary sattvic food</li>
     </ul>
 
     <div class="info-block">
