--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <li>Happening every week </li>
         <p><strong>📍 Zoom | Online</strong></p>
       </ul>
-     Drop a note 📞 9818503888
+     queries & help @ 9818503888
     </div>
 
     <div class="copy-box">
