--- a/index.html
+++ b/index.html
@@ -223,15 +223,14 @@
     </div>
 
     <ul class="timeline">
-      <li>24 Jul – Check-in post noon </li>
+      <li>24 Jul – Check-in after noon </li>
       <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
-      <li><strong>27 Jul</strong> – Program ends at 5:00 PM</li>
       <li>28 Jul – Check-out by Noon </li> 
     </ul> 
     <ul class="features">
      <li> attend complimentary rudra pooja meditation on mondays</li>
       <li>complimentary infinite follow-ups</li>
-      <li> complimentary sattvic food</li>
+      <li> enjoy complimentary sattvic food at ashram</li>
     </ul>
 
     <div class="info-block">
