--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
     <ul class="timeline">
       <li>24 Jul – Check-in after noon </li>
       <li><strong>25 Jul</strong> – Program starts at 9:30 AM</li>
+      <li><strong>27 Jul</strong> – Program ends at 5:30 PM </li>
       <li>28 Jul – Check-out by Noon </li> 
     </ul> 
     <ul class="features">
