--- a/index.html
+++ b/index.html
@@ -229,9 +229,11 @@
       <li>28 Jul – Check-out by Noon </li> 
     </ul> 
     <ul class="features">
-     <li> attend complimentary rudra pooja meditation on mondays</li>
-      <li>complimentary infinite follow-ups</li>
-      <li> enjoy complimentary sattvic food at ashram</li>
+      <li><strong>Complimentary at Ashram </strong></li>
+     <li> Rudra pooja meditation on Mondays</li>
+      <li> Regular follow-ups</li>
+      <li> Sattvic food</li>
+      <li> Free Course repeats outside ashram </li>
     </ul>
 
     <div class="info-block">
