--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       background-color: #E6FFFA;
     }
 
+  h3 {
+      font-size: 0.65rem;
+      font-weight: 300;
+      margin-bottom: 0.2rem;
+      background-color: #E4FFFA;
+    }
+
     .subtitle {
       font-size: 0.875rem;
       color: var(--muted);
@@ -279,7 +286,7 @@
         <li>Happening every week </li>
         <p><strong>📍 Zoom | Online</strong></p>
       </ul>
-     queries & help @ 9818503888
+  <h4> queries & help @ 9818503888 </h4> 
     </div>
     <div class="copy-box">
       <input class="copy-input" type="text" value="Sahaj Samadhi Meditation | Weekly in 2025" id="copyText2" readonly>
