--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       font-size: 0.65rem;
       font-weight: 300;
       margin-bottom: 0.2rem;
-      background-color: #E4FFFA;
+    
+      --text: #E4BFFA;
     }
 
     .subtitle {
