--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <li>Time: 7:30 PM – 10:00 PM</li>
         <p><strong>📍 Zoom | Online</strong></p>
       </ul>
-     <h4> 📞 9818503888 </h4>
+  <h4> queries & help @ 9818503888 </h4>
     </div>
 
     <div class="copy-box">
@@ -250,7 +250,7 @@
       </p>
       <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
     </div>
-
+  <h4> queries & help @ 9818503888 </h4>
     <div class="copy-box">
       <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025" id="copyText1" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText1')">Copy</button>
