--- a/index.html
+++ b/index.html
@@ -236,12 +236,13 @@
       <li><strong>27 Jul</strong> – Program ends at 5:30 PM </li>
       <li>28 Jul – Check-out by Noon </li> 
     </ul> 
-      <li> Free Course repeats outside ashram </li>
-      <li><strong>Complimentary at Ashram </strong></li>   
+
+    <h4>Complimentary at Ashram </h4> 
  <ul class="features">
      <li> Rudra pooja meditation on Mondays</li>
       <li> Regular follow-ups</li>
       <li> Sattvic food</li>
+    <h4>  <li> Free Course repeats outside ashram </li> </h4>
     </ul>
     <div class="info-block">
       <p><strong>📍 Location</strong>
