--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
      <li> Rudra pooja meditation on Mondays</li>
       <li> Regular follow-ups</li>
       <li> Sattvic food</li>
-    <h4>  <li> Free Course repeats outside ashram </li> </h4>
+    <h4> <li> Free Course repeats outside ashram </li> </h4>
     </ul>
     <div class="info-block">
-      <p><strong>📍 Location</strong>
-        Art of Living International Center<br>
+      <p>
+      📍  Art of Living International Center<br>
         Bengaluru, Karnataka
       </p>
       <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
