--- a/index.html
+++ b/index.html
@@ -245,10 +245,11 @@
     <h4> <li> Free Course repeats outside ashram </li> </h4>
     </ul>
     <div class="info-block">
-      <p>
+  <ul class="timeline">
+        <li>
       📍  Art of Living International Center<br>
         Bengaluru, Karnataka
-      </p>
+</li>
       <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
     </div>
   <h4> queries & help @ 9818503888 </h4>
