--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
       --text: #E4BFFA;
     }
 
+  h5 {
+      font-size: 0.75rem;
+      font-weight: 600;
+      margin-bottom: 0.4rem;
+
+    }
+
     .subtitle {
       font-size: 0.875rem;
       color: var(--muted);
@@ -237,7 +244,7 @@
       <li>28 Jul – Check-out by Noon </li> 
     </ul> 
 
-    <h2>Complimentary at Ashram </h2> 
+    <h5>Complimentary at Ashram </h5> 
  <ul class="features">
      <li> Rudra pooja meditation on Mondays</li>
       <li> Regular follow-ups</li>
