--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <p class="subtitle">In person | English, Hindi</p>
 
     <div class="info-block">
-      <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank">Register here</a>
+      <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank"> 25-27, Register here</a>
     </div>
 
     <ul class="timeline">
