--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <div class="info-block">
   <ul class="timeline">
         <li>
-    <strong> 📍  Art of Living International Center</strong> <br>
+    <strong> 📍  Art of Living International Center</strong>
         Bengaluru, Karnataka
 </li>
       <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
