--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <button class="copy-btn" onclick="copyToClipboard('copyText1')">Copy</button>
     </div>
 
-    <div class="footer">🥳🦦🤌🏻😎 Starts on 25 July 2025 | Bangalore ♡ Ashram</div>
+    <div class="footer">🦦🤌🏻 Starts on 25 July 2025 | Bangalore ♡ Ashram</div>
   </div>
 
   <script>
