--- a/index.html
+++ b/index.html
@@ -205,10 +205,11 @@
       <a href="https://aolt.in/883226" class="button" target="_blank">18–20, Register now</a>
 
       <ul class="features">
-        <li>Proven method to calm anxiety</li>
-        <li>Simple techniques for better sleep</li>
-        <li>Naturally activate parasympathetic system</li>
-      </ul>
+
+<br>        <li>To calm anxiety</li>
+        <li>For better sleep</li>
+        <li>Activate relaxation</li>
+<br>      </ul>
 
       <ul class="timeline">
         <li>Time: 7:30 PM – 10:00 PM</li>
